<resources>
    <string name="app_name">MAD</string>
    <string name="new_user_signup">SignUp</string>
    <string name="Login_Acc">LOGIN</string>
    <string name="log_in">Log In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="new_to_bridge_store">New To Bridge Store?</string>
    <string name="logo">Logo</string>
    <string name="full_name">Full Name</string>
    <string name="phone">Phone</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already Have an Account?</string>

    <string name="description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the.</string>
    <string name="contact_seller_btn">Contact Seller</string>
    <string name="product_name">SPICES TURMERIC POWDER</string>
    <string name="update">Update</string>
    <string name="remove">Remove</string>
    <string name="add_product_btn">Add Product</string>
    <string name="price_tag">RS. 3,200</string>

    <string name="ChatName">Avishka Umesh</string>
    <string name="CompanyName">This is Company</string>
    <string name="recived_message">This is a recived message</string>
    <string name="sent_message">This is sent message</string>

</resources>