<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomerLoginActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iconIv"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="90dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iconIv"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/log_in"
            android:textColor="@color/col2"
            android:textSize="28sp" />

    </RelativeLayout>

    <ScrollView
        android:id="@+id/scroll1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="30dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Email -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/shape_edittext01"
                    android:drawableStart="@drawable/ic_email_gray"
                    android:drawablePadding="10dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray01" />

            </com.google.android.material.textfield.TextInputLayout>


            <!--password-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/emailTil"
                android:layout_marginTop="20dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_edittext01"
                    android:drawableStart="@drawable/ic_password_gray"
                    android:drawablePadding="10dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray01" />

            </com.google.android.material.textfield.TextInputLayout>


            <!--forgot password-->
            <TextView
                android:id="@+id/tvForgotPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/passwordTil"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:text="@string/forgot_password"
                android:textColor="@color/gray02" />

            <!--login button-->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvForgotPass"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_button01"
                android:text="@string/login"
                android:textColor="@color/white" />


            <!--Redirect Register-->
            <TextView
                android:id="@+id/tvNewToStore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/btnLogin"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:padding="5dp"
                android:text="@string/new_to_bridge_store"
                android:textColor="@color/col1" />

            <TextView
                android:id="@+id/tvSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvNewToStore"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="1dp"
                android:padding="5dp"
                android:text="@string/new_user_signup"
                android:textColor="@color/col2"
                android:textStyle="bold" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>