<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomerRegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="110dp">

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@android:color/transparent"
            android:padding="10dp"
            android:src="@drawable/ic_back_black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/new_user_signup"
            android:textColor="@color/col2"
            android:textSize="28sp" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="40dp"
        android:layout_marginTop="125dp"
        android:layout_marginEnd="40dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--name-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_edittext01"
                    android:drawableStart="@drawable/ic_person_gray"
                    android:drawablePadding="10dp"
                    android:hint="@string/full_name"
                    android:inputType="textPersonName|textCapWords"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray01" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--phone-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phoneTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/nameTil"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/etPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_edittext01"
                    android:drawableStart="@drawable/ic_phone_gray"
                    android:drawablePadding="10dp"
                    android:hint="@string/phone"
                    android:inputType="phone"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray01" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--email-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/phoneTil"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_edittext01"
                    android:drawableStart="@drawable/ic_email_gray"
                    android:drawablePadding="10dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray01" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--password-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/emailTil"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_edittext01"
                    android:drawableStart="@drawable/ic_password_gray"
                    android:drawablePadding="10dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray01" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--confirm password-->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cPasswordTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/passwordTil"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/etConfirmPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_edittext01"
                    android:drawableStart="@drawable/ic_password_gray"
                    android:drawablePadding="10dp"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray01" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--SignUp button-->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cPasswordTil"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_button01"
                android:text="@string/new_user_signup"
                android:textColor="@color/white" />

            <!-- login redirect-->
            <TextView
                android:id="@+id/tvAlreadyUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/btnSignUp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:padding="5dp"
                android:text="@string/already_have_an_account"
                android:textColor="@color/col1" />

            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvAlreadyUser"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="1dp"
                android:padding="5dp"
                android:text="@string/Login_Acc"
                android:textColor="@color/col2"
                android:textStyle="bold" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>